# demo_tools

./: README.md
analyzer/: Makefile
analyzer/src/: CMakeLists.txt
analyzer/src/lib/: Analyzer.cc  Analyzer.hh  CMakeLists.txt  CallGraph.cc  Common.cc  FindErrorFuncs.cc  FindErrorFuncs.hh
tools/: compare.py  getBitcodePath.sh  getSourcePath.sh  judge_if_in_crix.cc  output_1.xlsx  output_2.xlsx  output_3.xlsx  人工审计结果.xlsx
